Cashwise related classes added

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 src/main/java/project_vs/test/demo/.vscode/launch.json
 src/main/java/project_vs/test/demo/target/test-classes/tests/Test1.class
 src/main/java/project_vs/test/demo/target/test-classes/tests/Test1.class
+src/main/java/project_vs/test/demo/target/test-classes/tests/Test2.class
+src/main/java/project_vs/test/demo/target/test-classes/tests/Test2.class
